MODON MRE BPDEV/force-app/main/default/objects/SMS_Message__mdt/SMS_Message__mdt.object-meta.xml
<CustomObject>
    <label>SMS Message</label>
    <pluralLabel>SMS Messages</pluralLabel>
</CustomObject>