MODON MRE BPDEV/force-app/main/default/objects/SMS_Message__mdt/fields/FromName__c.field-meta.xml
<CustomField>
    <fullName>FromName__c</fullName>
    <label>FromName</label>
    <length>20</length>
    <type>Text</type>
</CustomField>