MODON MRE BPDEV/force-app/main/default/objects/SMS_Message__mdt/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <label>ObjectName</label>
    <length>30</length>
    <type>Text</type>
</CustomField>