MODON MRE BPDEV/force-app/main/default/objects/SMS_Message__mdt/fields/ServiceName__c.field-meta.xml
<CustomField>
    <fullName>ServiceName__c</fullName>
    <label>ServiceName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>