MODON MRE BPDEV/force-app/main/default/objects/SMS_Message__mdt/fields/Type_Of_Service__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Service__c</fullName>
    <label>Type Of Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMS</fullName>
                <default>true</default>
                <label>SMS</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>